adding route to select the user
