# routers/authRouter.js
@@ -1,6 +1,6 @@
 import express, { application } from "express";
 import { loginValidator, roleValidator, sendOtpValidator, verifyOtpValidator } from "../middleware/express-validator/auth-validator.js";
-import { handleGetMe, handleLogin, handleLogout, handleSelectRole, handleSendOtp, handleVerifyOtp } from "../controllers/authcontroller.js";
+import { handleGetMe, handleLogin, handleLogout, handleSelectNewRole, handleSelectRole, handleSendOtp, handleVerifyOtp } from "../controllers/authcontroller.js";
 import { isAuthenticated } from "../middleware/authMiddleware.js";
 
 
@@ -12,5 +12,6 @@ router.post("/verify-otp", verifyOtpValidator(), handleVerifyOtp)
 router.use(isAuthenticated)
 router.get("/logout", handleLogout)
 router.get("/me", handleGetMe)
-router.put("/select-role", roleValidator(), handleSelectRole)
+router.put("/select-new-role", roleValidator(), handleSelectNewRole)
+router.get("/select-role", roleValidator(), handleSelectRole)
 export default router;
